--- a/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions_ru_RU.properties
@@ -15,8 +15,57 @@ AnalyticsComponent.estimateCalc.rejectEstimateCalc.cap  = \u041D\u0435 \u0441\u0
 
 ConfirmDialogWindow.cancel             = \u041E\u0442\u043C\u0435\u043D\u0430
 ConfirmDialogWindow.confirmMessage     = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435 \u043E\u043F\u0435\u0440\u0430\u0446\u0438\u044E
+ConfirmDialogWindow.saveContractCard   = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0434\u0430\u043D\u043D\u044B\u0435 \u043A\u0430\u0440\u0442\u043E\u0447\u043A\u0438 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430?
 ConfirmDialogWindow.sendSsrForApproval = \u041F\u0435\u0440\u0435\u0434\u0430\u0442\u044C \u043A\u0430\u0440\u0442\u043E\u0447\u043A\u0443 \u0421\u0421\u0420 \u043D\u0430 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435?
 ConfirmDialogWindow.yes                = \u0414\u0430
+
+ContractCardComponent.calcFields.createDate.cap                         = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+ContractCardComponent.calcFields.estimateCode.cap                       = \u041A\u043E\u0434 \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
+ContractCardComponent.calcFields.name.cap                               = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+ContractCardComponent.calcFields.projectCode.cap                        = \u041A\u043E\u0434 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
+ContractCardComponent.closebutton.cap                                   = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
+ContractCardComponent.commentTab.cap                                    = \u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
+ContractCardComponent.costsTab.cap                                      = \u0421\u043C\u0435\u0442\u043D\u0430\u044F \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
+ContractCardComponent.estimatecalculationfileds.cap                     = \u0410\u0442\u0440\u0438\u0431\u0443\u0442\u044B \u0441\u0432\u043E\u0434\u043D\u043E\u0433\u043E \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
+ContractCardComponent.fields.contractCode                               = \u2116 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+ContractCardComponent.fields.contractType                               = \u0422\u0438\u043F
+ContractCardComponent.fields.customerName                               = \u0417\u0430\u043A\u0430\u0437\u0447\u0438\u043A
+ContractCardComponent.fields.endDate                                    = \u0421\u0440\u043E\u043A \u043E\u043A\u043E\u043D\u0447\u0430\u043D\u0438\u044F
+ContractCardComponent.fields.executorName                               = \u0418\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C
+ContractCardComponent.fields.project                                    = \u041F\u0440\u043E\u0435\u043A\u0442
+ContractCardComponent.fields.signingDate                                = \u0414\u0430\u0442\u0430 \u043F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u0438\u044F
+ContractCardComponent.fields.startDate                                  = \u0421\u0440\u043E\u043A \u043D\u0430\u0447\u0430\u043B\u0430
+ContractCardComponent.fileds.cap                                        = \u0410\u0442\u0440\u0438\u0431\u0443\u0442\u044B \u043A\u0430\u0440\u0442\u043E\u0447\u043A\u0438 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+ContractCardComponent.initialmaxpricebutton.cap                         = \u0420\u0430\u0441\u0447\u0435\u0442 \u041D\u041C\u0426
+ContractCardComponent.itemsCombobox.placeholder                         = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C
+ContractCardComponent.notifications.save.cap                            = \u041A\u0430\u0440\u0442\u043E\u0447\u043A\u0430 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0430
+ContractCardComponent.notifications.save.des                            = \u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u0448\u0430\u0433 \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D
+ContractCardComponent.priceLevel.cap                                    = \u0423\u0440\u043E\u0432\u0435\u043D\u044C \u0446\u0435\u043D
+ContractCardComponent.saveButton.cap                                    = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u043A\u0430\u0440\u0442\u043E\u0447\u043A\u0443 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+ContractCardComponent.saveButton.desc                                   = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+ContractCardComponent.sendforapprovalbutton.cap                         = \u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C \u043D\u0430 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435
+ContractCardComponent.sentToApproval.cap                                = \u041E\u0442\u043F\u0430\u0440\u0432\u043B\u0435\u043D\u043E \u043D\u0430 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435
+ContractCardComponent.sentToApproval.des                                = \u041F\u0440\u043E\u0446\u0435\u0441\u0441 \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438 \u0441\u043C\u0435\u0442 \u043F\u0435\u0440\u0435\u0445\u043E\u0434\u0438\u0442 \u043A \u0441\u043B\u0435\u0434\u0443\u044E\u0449\u0435\u043C\u0443 \u0448\u0430\u0433\u0443 - \u0421\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435 \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430 \u0432 \u041D\u0422\u0426
+ContractCardComponent.settingsbutton.cap                                = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0441\u0432\u043E\u0434\u043D\u043E\u0433\u043E \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
+ContractCardComponent.tabs.coefficients                                 = \u041A\u043E\u044D\u0444\u0444\u0438\u0446\u0438\u0435\u043D\u0442\u044B \u043F\u0435\u0440\u0435\u0441\u0447\u0435\u0442\u0430
+ContractCardComponent.tabs.estimates                                    = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u044B\u0435 \u0441\u043C\u0435\u0442\u044B
+ContractCardComponent.tabs.milestones                                   = \u042D\u0442\u0430\u043F\u044B \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+ContractCardComponent.uploadLimitMessage.cap                            = \u0417\u0430\u0433\u0440\u0443\u0436\u0430\u0435\u043C\u044B\u0439 \u0444\u0430\u0439\u043B \u043D\u0435 \u0434\u043E\u043B\u0436\u0435\u043D \u043F\u0440\u0435\u0432\u044B\u0448\u0430\u0442\u044C {0} \u041C\u0431
+ContractCardComponent.uploadMimeTypeMessage                             = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 EXCEL-\u0444\u0430\u0439\u043B
+ContractCardComponent.uploadMimeTypeMessage.cap                         = \u041D\u0435\u0434\u043E\u043F\u0443\u0441\u0442\u0438\u043C\u044B\u0439 \u0444\u043E\u0440\u043C\u0430\u0442 \u0444\u0430\u0439\u043B\u0430
+ContractCardComponent.uploadProgressWindow.cancelButton.cap             = \u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
+ContractCardComponent.uploadProgressWindow.cap                          = \u0417\u0430\u0433\u0440\u0443\u0437\u043A\u0430 \u043B\u043E\u043A\u0430\u043B\u044C\u043D\u044B\u0445 \u0441\u043C\u0435\u0442\u0430 \u0438\u0437 Excel \u0444\u0430\u0439\u043B\u0430
+ContractCardComponent.uploadProgressWindow.file.cap                     = \u0418\u043C\u044F \u0444\u0430\u0439\u043B\u0430
+ContractCardComponent.uploadProgressWindow.state.cap                    = \u0421\u043E\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0435
+ContractCardComponent.uploadProgressWindow.success.cap                  = \u041E\u0431\u0440\u0430\u0431\u043E\u0442\u043A\u0430 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0430
+ContractCardComponent.uploadProgressWindow.success.des                  = \u0424\u0430\u0439\u043B {0} \u0431\u044B\u043B \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u043E\u0431\u0440\u0430\u0431\u043E\u0442\u0430\u043D \u0437\u0430 {1} \u0441\u0435\u043A
+ContractCardComponent.uploadProgressWindow.toBackgroundButton.cap       = \u041F\u0435\u0440\u0435\u043A\u043B\u044E\u0447\u0438\u0442\u044C \u0432 \u0444\u043E\u043D\u043E\u0432\u044B\u0439 \u0440\u0435\u0436\u0438\u043C
+ContractCardComponent.uploadProgressWindow.toBackgroundNotification.cap = \u041F\u0435\u0440\u0435\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u0435 \u0432 \u0444\u043E\u043D\u043E\u0432\u044B\u0439 \u0440\u0435\u0436\u0438\u043C
+ContractCardComponent.uploadProgressWindow.toBackgroundNotification.des = \u0420\u0435\u0437\u0443\u043B\u044C\u0442\u0430\u0442 \u043E\u043F\u0435\u0440\u0430\u0446\u0438\u0438 \u0431\u0443\u0434\u0435\u0442 \u043D\u0430\u043F\u0440\u0430\u0432\u043B\u0435\u043D \u0412\u0430\u043C \u043F\u043E Email
+ContractCardComponent.uploadProgressWindow.uploadingProgress.cap        = \u0412\u044B\u043F\u043E\u043B\u043D\u0435\u043D\u043E
+ContractCardComponent.viewAttributes.cap                                = \u041F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u044B \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F
+ContractCardComponent.viewCombobox.placeholder                          = \u0421\u043C\u0435\u0442\u0430
+ContractCardComponent.workSmrTab.cap                                    = \u0420\u0430\u0431\u043E\u0442\u0430 \u0421\u041C\u0420
 
 CostsTreeGridComponent.addItemButton.desc       = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u043C\u0435\u0442\u043D\u0443\u044E \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
 CostsTreeGridComponent.bigdecimalconverter.desc = \u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0439 \u0444\u043E\u0440\u043C\u0430\u0442 \u0447\u0438\u0441\u043B\u0430
@@ -126,37 +175,6 @@ ProcessManagerView.procViewerTab.cap  = \u041F\u0440\u043E\u0446\u0435\u0441\u04
 RegisterComponent.createItemButton.cap = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
 RegisterComponent.filter.placeholder   = \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0444\u0438\u043B\u044C\u0442\u0440...
 RegisterComponent.openItemButton.cap   = \u041E\u0442\u043A\u0440\u044B\u0442\u044C
-
-SummaryEstimateCardComponent.calcFields.createDate.cap                         = \u0414\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
-SummaryEstimateCardComponent.calcFields.estimateCode.cap                       = \u041A\u043E\u0434 \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
-SummaryEstimateCardComponent.calcFields.name.cap                               = \u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-SummaryEstimateCardComponent.calcFields.projectCode.cap                        = \u041A\u043E\u0434 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
-SummaryEstimateCardComponent.closebutton.cap                                   = \u0417\u0430\u043A\u0440\u044B\u0442\u044C
-SummaryEstimateCardComponent.commentTab.cap                                    = \u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
-SummaryEstimateCardComponent.costsTab.cap                                      = \u0421\u043C\u0435\u0442\u043D\u0430\u044F \u0441\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
-SummaryEstimateCardComponent.estimatecalculationfileds.cap                     = \u0410\u0442\u0440\u0438\u0431\u0443\u0442\u044B \u0441\u0432\u043E\u0434\u043D\u043E\u0433\u043E \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
-SummaryEstimateCardComponent.initialmaxpricebutton.cap                         = \u0420\u0430\u0441\u0447\u0435\u0442 \u041D\u041C\u0426
-SummaryEstimateCardComponent.itemsCombobox.placeholder                         = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C
-SummaryEstimateCardComponent.priceLevel.cap                                    = \u0423\u0440\u043E\u0432\u0435\u043D\u044C \u0446\u0435\u043D
-SummaryEstimateCardComponent.saveButton.desc                                   = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u0432\u0441\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F \u0421\u0421\u0420
-SummaryEstimateCardComponent.sendforapprovalbutton.cap                         = \u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C \u043D\u0430 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435
-SummaryEstimateCardComponent.settingsbutton.cap                                = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0441\u0432\u043E\u0434\u043D\u043E\u0433\u043E \u0441\u043C\u0435\u0442\u043D\u043E\u0433\u043E \u0440\u0430\u0441\u0447\u0435\u0442\u0430
-SummaryEstimateCardComponent.uploadLimitMessage.cap                            = \u0417\u0430\u0433\u0440\u0443\u0436\u0430\u0435\u043C\u044B\u0439 \u0444\u0430\u0439\u043B \u043D\u0435 \u0434\u043E\u043B\u0436\u0435\u043D \u043F\u0440\u0435\u0432\u044B\u0448\u0430\u0442\u044C {0} \u041C\u0431
-SummaryEstimateCardComponent.uploadMimeTypeMessage                             = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 EXCEL-\u0444\u0430\u0439\u043B
-SummaryEstimateCardComponent.uploadMimeTypeMessage.cap                         = \u041D\u0435\u0434\u043E\u043F\u0443\u0441\u0442\u0438\u043C\u044B\u0439 \u0444\u043E\u0440\u043C\u0430\u0442 \u0444\u0430\u0439\u043B\u0430
-SummaryEstimateCardComponent.uploadProgressWindow.cancelButton.cap             = \u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
-SummaryEstimateCardComponent.uploadProgressWindow.cap                          = \u0417\u0430\u0433\u0440\u0443\u0437\u043A\u0430 \u043B\u043E\u043A\u0430\u043B\u044C\u043D\u044B\u0445 \u0441\u043C\u0435\u0442\u0430 \u0438\u0437 Excel \u0444\u0430\u0439\u043B\u0430
-SummaryEstimateCardComponent.uploadProgressWindow.file.cap                     = \u0418\u043C\u044F \u0444\u0430\u0439\u043B\u0430
-SummaryEstimateCardComponent.uploadProgressWindow.state.cap                    = \u0421\u043E\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0435
-SummaryEstimateCardComponent.uploadProgressWindow.success.cap                  = \u041E\u0431\u0440\u0430\u0431\u043E\u0442\u043A\u0430 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0430
-SummaryEstimateCardComponent.uploadProgressWindow.success.des                  = \u0424\u0430\u0439\u043B {0} \u0431\u044B\u043B \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u043E\u0431\u0440\u0430\u0431\u043E\u0442\u0430\u043D \u0437\u0430 {1} \u0441\u0435\u043A
-SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundButton.cap       = \u041F\u0435\u0440\u0435\u043A\u043B\u044E\u0447\u0438\u0442\u044C \u0432 \u0444\u043E\u043D\u043E\u0432\u044B\u0439 \u0440\u0435\u0436\u0438\u043C
-SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundNotification.cap = \u041F\u0435\u0440\u0435\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u0435 \u0432 \u0444\u043E\u043D\u043E\u0432\u044B\u0439 \u0440\u0435\u0436\u0438\u043C
-SummaryEstimateCardComponent.uploadProgressWindow.toBackgroundNotification.des = \u0420\u0435\u0437\u0443\u043B\u044C\u0442\u0430\u0442 \u043E\u043F\u0435\u0440\u0430\u0446\u0438\u0438 \u0431\u0443\u0434\u0435\u0442 \u043D\u0430\u043F\u0440\u0430\u0432\u043B\u0435\u043D \u0412\u0430\u043C \u043F\u043E Email
-SummaryEstimateCardComponent.uploadProgressWindow.uploadingProgress.cap        = \u0412\u044B\u043F\u043E\u043B\u043D\u0435\u043D\u043E
-SummaryEstimateCardComponent.viewAttributes.cap                                = \u041F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u044B \u043E\u0442\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u0438\u044F
-SummaryEstimateCardComponent.viewCombobox.placeholder                          = \u0421\u043C\u0435\u0442\u0430
-SummaryEstimateCardComponent.workSmrTab.cap                                    = \u0420\u0430\u0431\u043E\u0442\u0430 \u0421\u041C\u0420
 
 TaskAlreadyAssigned.text = \u0412 \u0434\u0430\u043D\u043D\u044B\u0439 \u043C\u043E\u043C\u0435\u043D\u0442 \u0441 \u0437\u0430\u0434\u0430\u0447\u0435\u0439 \u0440\u0430\u0431\u043E\u0442\u0430\u0435\u0442 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C {0}. \u0412 \u0441\u043B\u0443\u0447\u0430\u0435 \u043D\u0430\u0441\u0442\u0443\u043F\u043B\u0435\u043D\u0438\u044F \u043A\u0440\u0430\u0439\u043D\u0435\u0433\u043E \u0441\u0440\u043E\u043A\u0430 {1} \u0437\u0430\u0434\u0430\u0447\u0430 \u0431\u0443\u0434\u0435\u0442 \u044D\u0441\u043A\u0430\u043B\u0438\u0440\u043E\u0432\u0430\u043D\u0430.
 
@@ -268,6 +286,8 @@ main.ui.menu.processManager   = \u041C\u0435\u043D\u0435\u0434\u0436\u0435\u0440
 
 reatedoc.CreateDocSettingsWindow.columnsGrid.columns.id = \u041F\u043E\u043B\u0435
 
+ru.gzpn.spc.csl.model.enums.ContractType.contract           = \u041A\u043E\u043D\u0442\u0440\u0430\u043A\u0442
+ru.gzpn.spc.csl.model.enums.ContractType.selection          = \u041E\u0442\u0431\u043E\u0440
 ru.gzpn.spc.csl.model.enums.DocType.local_estimate          = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u0430\u044F \u0441\u043C\u0435\u0442\u0430
 ru.gzpn.spc.csl.model.enums.DocType.set_of_drawings         = \u041A\u043E\u043C\u043F\u043B\u0435\u043A\u0442 \u0447\u0435\u0440\u0447\u0435\u0436\u0435\u0439
 ru.gzpn.spc.csl.model.enums.EstimateType.local_estimates    = \u041B\u043E\u043A\u0430\u043B\u044C\u043D\u044B\u0435 \u0441\u043C\u0435\u0442\u044B
